--- a/site/index.html
+++ b/site/index.html
@@ -1,10 +1,10 @@
-<!DOCTYPE html>
-<html>
-<head>
-	<meta charset="utf-8">
-	<title>site</title>
-</head>
-<body>
-<h1>Name:Musthak Age:20 College:Gitam </h1>
-</body>
-</htmul>
+<h1 id="brahmanandam">Brahmanandam</h1>
+<p><strong><em>Kanneganti Brahmanandam (born 1 February 1956) is an Indian actor, comedian, and film director known for his works predominantly in Telugu cinema. He currently holds the Guinness World Record for the most screen credits for a living actor, appearing in over 1,000 films to date. He was honoured with the Padma Shri, the fourth-highest civilian award in India, for his contribution to Indian cinema in 2009.[4] Brahmanandam is known particularly for his comic expressions.One of the highest-paid comedy actors in India, Brahmanandam has garnered six state Nandi Awards, one Filmfare Award South, six CineMAA Awards, and three South Indian International Movie Awards.</em></strong></p>
+<h2 id="early-and-personal-life"><strong><em>Early and personal life</em></strong></h2>
+<p><strong>Brahmanandam was born on 1 February 1956 in Sattenapalli, Guntur district of present-day Andhra Pradesh.Brahmanandam married Lakshmi and has two sons, Raja Gautham and Siddarth. Gautham is also an actor who starred in films such as Pallakilo Pellikuthuru (2004) and Manu (2018).Gautham is married and has a son born in 2017</strong></p>
+<h2 id="career"><strong><em>Career</em></strong></h2>
+<p><strong><em>Brahmanandam initially worked as Telugu language lecturer in Attili of West Godavari district. He then made his film debut in Jandhyala's directorial Aha Naa-Pellanta! (1987). He then played the lead role in Babai Hotel (1992)</em></strong></p>
+<h2 id="awards-and-honours"><strong><em>Awards and honours</em></strong></h2>
+<p><strong><em>In January 2009, the government of India bestowed the title of Padma Shri, the fourth-highest civilian award, on Brahmanandam for his contributions to art</em></strong> ## <em><em>Nandi Awards</em></em> <strong><em>Nandi Award for Best Male Comedian - Money (1993)</em></strong> <strong><em>Nandi Award for Best Supporting Actor - Anna (1994)</em></strong> <strong><em>Nandi Award for Best Male Comedian - Anaganaga Oka Roju (1995)</em></strong> <strong><em>Nandi Award for Best Male Comedian - Vinodam (1996)</em></strong> <strong><em>Nandi Award for Best Male Comedian - Ready (2008)</em></strong> <strong><em>Nandi Award for Best Male Comedian - Race Gurram (2014)</em></strong> ## <em><em>Cinema Awards</em></em> <strong><em>CineMAA Award for Best Comedian - Manmadhudu, Dhee, Konchem Ishtam Konchem Kashtam, Adhurs &amp; Dookudu</em></strong> ## <em><em>South Indian International Movie Awards</em></em> <strong><em>SIIMA Award for Best Comedian (Telugu) - Dookudu (2011)</em></strong> <strong><em>SIIMA Award for Best Comedian (Telugu) - Baadshah (2013)</em></strong> <strong><em>SIIMA Award for Best Comedian (Telugu) - Race Gurram (2014)</em></strong> ## <em><em>Filmfare Awards</em></em> <strong><em>Filmfare Award for Best Comedian – Telugu - Manmadhudu (2002)</em></strong> ## <em><em>Others</em></em> <strong><em>Hyderabad Times Film Awards Best Actor in a Comic Role - Dookudu (2011)</em></strong> <strong><em>TSR - TV9 National Film Award for Best Comedian - Attarintiki Daredi (2013)</em></strong></p>
+<h2 id="filmography"><strong><em>Filmography</em></strong></h2>
+<p><strong><em>Brahmanandam acted in more than 1,000 films</em></strong></p>
